# DASEA

./: .env.example  .gitignore  CNAME  CONTRIBUTE.md  CONTRIBUTE.ms  LICENSE  README.adoc  README.md  Vagrantfile  _config.yml  dataset_conf.json  datasets.json  go.mod  go.sum  import_into_db_example_script.sql  index.html  main.go  mkdocs.yml  pyproject.toml  status.json
.github/workflows/: README.md  build.yml  build_and_test.yml  create_release copy.yml  create_release.yml  destroy_droplet.yml  ls.yml  main.yml  repo_dispatch.yml
artwork/: README.md  logo.graffle
assets/: main.css
common/helpers/: csv.go  fileHandler.go  http.go  syscmd.go  util.go  (+1 more)
conan/: conan.go  go.mod  test.json
core/: main.py
dasea/: README.md  alire.py  apt.py  apt2.py  cargo.py  chromebrew.py  conan.py  datamodel.py  fpm.py  homebrew.py  main.py  maven.py  nimble.py  portage.py  ports.py  release_dataset.py  utils.py  vcpkg.py
data/: dataset_versions.json
docs/: Gemfile  _config.yml  about.markdown  available_commands.adoc  compatibility.adoc  datasets.json  index.html  index.md  mining_time.adoc  setup_dasea_tool.md  setup_vagrant.md  using_the_dataset.md
example_usages/: import_to_db_and_query.sql
fpm/: README.md  fpm.go  go.mod  notes_28-10-21.md
homepage/: datasets.json  index.html
site/: index.html
tests/: test_alire_end_to_end.py  test_cargo_end_to_end.py  test_chromebrew_end_to_end.py  test_conan_end_to_end.py  test_fpm_end_to_end.py  test_homebrew_end_to_end.py  test_nimble_end_to_end.py  test_vcpkg_end_to_end.py
vcpkg/: README.md  go.mod  vcpkg.go
(+71 files in other folders)
