[tool.poetry]
name = "dasea"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
requests = "^2.26.0"
conan = "^1.43.0"
toml = "^0.10.2"
lxml = "^4.6.4"
bs4 = "^0.0.1"
html5lib = "^1.1"
mongita = "^1.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
tqdm = "^4.62.3"
mkdocs = "^1.2.3"
pandas = "^1.3.5"
SQLAlchemy = "^1.4.29"
networkx = "^2.6.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dasea = "dasea.main:main"